# Funnel

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 61351c3a3241_initial.py
env/: prod.env.template
postgres/: Dockerfile  init.sql.template  pg.env.template
src/: main.py
src/core/: funnel.py  lifespan.py  settings.py  utils.py
src/database/: base.py  helper.py  models.py  orm.py  tps.py  triggers.py  utils.py
src/handlers/: __init__.py
src/handlers/simple/: handler.py  utils.py
